project/logs/20250601_123513.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

Object3d.VS.hlsl:1:1: error: unknown type name 'zstruct'; did you mean 'struct'?
zstruct TransformationMatrix
^~~~~~~
struct

